# truenas_pylibzfs

./: .gitignore  CLAUDE.md  README.md  py_zfs.h  py_zfs_dataset.h  py_zfs_enc_dataset.h  py_zfs_object.h  py_zfs_pool.h  py_zfs_prop.h  py_zfs_resource.h  pylibzfs2.c  pylibzfs2.h  pyproject.toml  setup.py  zfs.h
.github/: zfs-branch
debian/: changelog  clean  control  python3-truenas-pylibzfs.install  python3-truenas-pylibzfs.manpages  rules  zectl
examples/: channel_program.py  clone_promote.py  create_dataset.py  create_encrypted_dataset.py  create_pool.py  dump_events.py  encryption.py  filterable_query.py  get_space_stats.py  iter_pools.py  iter_root_datasets.py  iter_root_filesystems.py  mount_umount.py  pool_stats.py  recursive_snapshot.py  rollback.py  set_properties.py  user_hold_context_manager.py  userquota.py
src/: README.md  error.c  nvlist_utils.c  py_zfs.c  py_zfs_dataset.c  py_zfs_enum.c  py_zfs_iter.c  py_zfs_iter.h  py_zfs_object.c  py_zfs_pool.c  py_zfs_prop.c  py_zfs_resource.c  py_zfs_state.c  py_zfs_state.h  py_zfs_vdev.c  py_zfs_volume.c  pylibzfs2.c  pylibzfs2.h  pylibzfs2_enums.h  truenas_pylibzfs.c  truenas_pylibzfs.h  truenas_pylibzfs_core.h  truenas_pylibzfs_crypto.h  truenas_pylibzfs_enc.h  truenas_pylibzfs_enums.h  truenas_pylibzfs_state.c  truenas_pylibzfs_state.h  utils.c  zfs.h
stubs/: __init__.pyi  enums.pyi  kstat.pyi  libzfs_types.pyi  lzc.pyi  property_sets.pyi
tests/: conftest.py  test_add_vdevs.py  test_bootenv_cli.py  test_bootenv_engine_activate.py  test_bootenv_engine_create.py  test_bootenv_engine_destroy.py  (+44 more)
(+75 files in other folders)
